# reig

./: CMakeLists.txt  Readme.md  lib.project  main.cpp  readme.md  reig.cpp  reig.h  reig.workspace  sample.gitignore
GL3-TestBed/: Camera.cpp  Camera.h  GL3-TestBed.project  Shader.cpp  Shader.hpp  main.cpp
GL3-TestBed/shaders/: base.frag  base.vert  gui.frag  gui.vert
SDL-TestBed/: SDL-TestBed.project  StopWatch.cpp  StopWatch.h  main.cpp
docs/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
lib/: reig.cpp  reig.h
lib/reig/: config.cpp  config.h  context.cpp  context.h  context_fwd.h  defs.h  drawdata.h  exception.cpp  exception.h  focus.cpp  focus.h  focus2.h  gsl.h  internal.cpp  internal.h  keyboard.cpp  keyboard.h  keyboard_shifted.cpp  maths.h  mouse.cpp  mouse.h  primitive.cpp  primitive.h  reference_widget.cpp  reference_widget.h  reference_widget_entry.h  reference_widget_entry.tcc  reference_widget_list.cpp  reference_widget_list.h  reference_widget_list.tcc  reference_widget_slider.cpp  text.h  window.cpp  window.h
